Add arguments to server and console script to prevent warnings (#2698)
(cherry picked from commit 428fe0ddf7d022abb0318650b1a550aaf1327377)